--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.4.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "aws-sdk": "^2.643.0",
     "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "passport": "^0.4.1",
@@ -36,6 +39,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "sqlite3": "^4.1.1",
+    "typedi": "^0.8.0",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
