--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
-    "aws-sdk": "^2.643.0",
+    "@types/request-promise": "^4.1.46",
+    "aws-sdk": "^2.648.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
@@ -36,6 +37,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
+    "request-promise": "^4.2.5",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "sqlite3": "^4.1.1",
